2008-10-10  Richard Hult  <richard@imendio.com>

	* src/dh-search.[ch]: Remove dh_search_grab_focus().
	* src/dh-window.c: Replace the use of the above with
	gtk_widget_grab_focus().

2008-10-10  Richard Hult  <richard@imendio.com>

	* data/devhelp.desktop.in.in: Remove Encoding field since
	desktop-file-validate complains about it, thanks to Enrico Tröger.
	Also remove the MimeType field as haven't supported opening
	devhelp files for a long time (have we ever?).

2008-10-10  Richard Hult  <richard@imendio.com>

	* data/Makefile.am: Install the schemas.in file so ige-conf can
	use it for defaults handling when using NSUserDefaults.

2008-10-10  Richard Hult  <richard@imendio.com>

	* src/dh-search.c: (dh_search_class_init, dh_search_grab_focus):
	Prepare to get rid of dh_search_grab_focus().

2008-10-10  Richard Hult  <richard@imendio.com>

	* src/dh-assistant.c: (dh_assistant_init): Set window title.

2008-10-10  Richard Hult  <richard@imendio.com>

	* src/dh-keyword-model.h: Undeprecate by s/GtkType/GType/.

2008-10-10  Richard Hult  <richard@imendio.com>

	* src/dh-search.c: (dh_search_new): Replace deprecated API.

2008-10-10  Richard Hult  <richard@imendio.com>

	* src/eggfindbar.c: Sync from evince to get rid of deprecated
	APIs. Reapply the removal of property translations.

2008-10-09  Richard Hult  <richard@imendio.com>

	* src/dh-search.h: Remove show_advanced function here too, it was
	removed in the C file already.

2008-10-09  Richard Hult  <richard@imendio.com>

	* src/dh-util.[ch]: Add experimental state saving code to be used
	soon.

2008-10-09  Richard Hult  <richard@imendio.com>

	* src/dh-util.c (dh_util_build_data_filename): Don't include the
	"devhelp" directory component.

	* src/dh-assistant-view.c (dh_assistant_view_set_link): Add
	"devhelp" component here.

2008-10-09  Richard Hult  <richard@imendio.com>

	* src/dh-assistant-view.[ch]: Consistency fixes after the
	refactoring: Don't use "self", use some form of the name of the