@@ -1,5 +1,11 @@
 2008-10-10  Richard Hult  <richard@imendio.com>
 
+	* data/devhelp.schemas.in: Restructure the non-preferences keys
+	that are used for saving state so we can add more of those without
+	making a mess.
+
+2008-10-10  Richard Hult  <richard@imendio.com>
+
 	* src/dh-search.[ch]: Remove dh_search_grab_focus().
 	* src/dh-window.c: Replace the use of the above with
 	gtk_widget_grab_focus().
